<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.AlbumsActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
    <include layout="@layout/app_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?android:attr/actionBarSize">

        <EditText
            android:id="@+id/etSearch"
            style="@style/SearchEditTextStyle"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center_vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/agregaralbumbtn"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="#D0BCFF"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:onClick="navegarAddAlbum"
                android:padding="2dp"
                android:paddingEnd="8dp"
                android:text="Agregar un álbum"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/list_musicians"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D0BCFF"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:paddingEnd="6dp"
                android:text="Ver listado de bandas"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="18dp"
                android:layout_height="39dp"
                android:layout_weight="1" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlbums"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</FrameLayout>