<resources>
    <string name="app_name">Vinilos</string>
    <string name="detail_album_artist">Género</string>
    <string name="detail_album_description">Descripción</string>
    <string name="albums">Álbumes</string>
    <string name="welcome_title">VINILOS</string>
    <string name="welcome_rol1">Coleccionista</string>
    <string name="welcome_rol2">Usuario</string>
    <string name="description_Row">GOBACKROWIMAGE</string>
    <string name="asignar_cancion">Asignar Canción</string>
    <string name="comentar">Comentar</string>
    <string name="title_activity_artist_detail">ArtistDetailActivity</string>
    <string name="birthday">Fecha creacion de la banda</string>
    <string name="tie_track_to_album">Asociar canción al álbum</string>
    <string name="track_name_hint">Nombre de la canción</string>
    <string name="track_duration_hint">Duración de la canción</string>
    <string name="track_descripcion_hint">Descripción</string>
    <string name="track_puntuacion_hint">Puntuación</string>
    <string name="tie_track">Asociar Canción</string>
    <string name="tie_comment">Asociar Comentario</string>
    <string name="tie_album_to_band">Asociar album al artiste</string>
</resources>

