...
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="¿Con qué usuario quiere ingresar?"/>

            <Button
                android:id="@+id/btn_coleccionista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
...
