...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Buscando America"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold"
...
