<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.MusiciansActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <include
        android:id="@+id/include"
        layout="@layout/app_image"
        android:layout_width="412dp"
        android:layout_height="580dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:layout_editor_absoluteX="-1dp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </androidx.appcompat.widget.SearchView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMusicians"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="1.0"></androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>