<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!-- Toolbar -->
    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
    <include layout="@layout/app_image" />

    <!-- Formulario -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Titulo -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Asociar album a banda"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_background"
                android:padding="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etAlbumIdLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColorHint="@android:color/white"
                        app:boxStrokeColor="@android:color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAlbumId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:hint="ID del Album"
                            android:inputType="text"
                            android:maxLength="100"
                            android:textColor="@android:color/white"
                            android:textColorHighlight="@android:color/white"
                            android:textColorHint="@android:color/white" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/tvErrors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text=""
                        android:textColor="@color/red"
                        android:textSize="16sp" />

                    <!-- Botones Cancelar y Guardar -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCancelar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Cancelar"
                            android:textColor="@color/purple_button_text"
                            android:backgroundTint="@color/material3_dark_on_primary"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            app:cornerRadius="20dp"/>

                        <View
                            android:layout_width="8dp"
                            android:layout_height="match_parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnGuardar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Guardar"
                            android:textColor="@color/purple_button_text"
                            android:backgroundTint="@color/material3_dark_on_primary"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            app:cornerRadius="20dp"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
